# Split_SpTRSV

./: Makefile  README.md
extras/hts/: LICENSE  Makefile  common.h  downloadmatrix.py  dummyFactorize.h  hts.cpp  hts.hpp  hts.txt  hts_decl.hpp  hts_impl.hpp  hts_impl_def.hpp  hts_test.cpp  hts_test_orig.cpp  hts_test_util.hpp  main.cpp  matrix.cpp  matrix_list.txt  matrix_list_revised.txt  readme.txt  run_split_code.py  util.h
extras/libufget-1.0.3/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CODE  Doxyfile  INSTALL.md  README.md  libufget.pc.in
extras/libufget-1.0.3/debian/: README  changelog  control  copyright  libufget-bin.install  libufget-dev.install  libufget-doc.docs  rules
extras/libufget-1.0.3/examples/: demo_cg.c  demo_convert_all.c  demo_download_all.c  examples.dox
extras/libufget-1.0.3/src/: conv.c  documentation.dox  libufget.h  sql.c  test_archive.c  uf_collection.c  uf_internal.h  uf_matrix.c  uf_query.c  uf_query_pre.c  uf_read.c  ufget-update.c
extras/libufget-1.0.3/src/io/: compress_handler.c  compress_io_bzip.c  compress_io_gzip.c  compress_io_uncompressed.c  compress_io_xz.c  io.c  io.h  rename_source.sed
include/: SILU.h  SILU_GPU.h  device_ds.h  levels.h  matrix.h  mmio.h  policy.h  quicksort.h  sptrsv_syncfree_cuda.cuh  sptrsv_syncfree_serialref.h
src/: SILU.cpp  SILU_GPU.cu  main.cpp  matrix.cpp  mmio.cpp
